# shield-sync

./: .gitignore  Cargo.toml  Readme.md  decoded.txt  secret.enc
src/: database.rs  error.rs  lib.rs  main.rs  watcher.rs
src/crypto/: mod.rs
