[package]
name = "shield-sync"
version = "0.1.0"
edition = "2021"
authors = ["Pratik Raut <your-email@example.com>"]
description = "End-to-end encrypted file synchronization tool"
license = "MIT"
repository = "https://github.com/pratikdevelop/shield-sync"
keywords = ["encryption", "sync", "privacy", "security", "backup"]
categories = ["cryptography", "filesystem", "command-line-utilities"]

[dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
async-trait = "0.1"

# Cryptography
chacha20poly1305 = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# File system
notify = "6.1"
walkdir = "2.5"

# Storage
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# CLI
clap = { version = "4.5", features = ["derive", "cargo"] }
colored = "2.1"
indicatif = "0.17"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
chrono = "0.4"
uuid = { version = "1.11", features = ["v4", "serde"] }

[dev-dependencies]
tempfile = "3.13"
criterion = "0.5"

[[bin]]
name = "shield-sync"
path = "src/main.rs"

[lib]
name = "shield_sync"
path = "src/lib.rs"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true